--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <h1>Clase 1</h1>
     <!-- <script src="./clase1.js "></script> -->
-    <script src="./entrega2.js"></script>
+    <script src="./arrays.js"></script>
+    <script src="./preentrega1.js"></script>
   </body>
 </html>
