localstorage en pushbar

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
         <p class="titulo">Carrito</p>
         <div id="productosEnCarrito">
       </div>
+      <br>
+      <div class="botonesCarrito">
+        <button type="button" class="btn btn-outline-secondary">Resetear carrito</button>
+        <button type="button" class="btn btn-outline-success">Avanzar Compra</button>
+      </div>
     </div>
     <div class="botonVerCarrito">
       <button
