--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./estilo/style.css" />
+    <!--libreria sweetalert-->
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <title>ecommerce</title>
   </head>
   <body>
@@ -33,9 +35,12 @@
         <div id="productosEnCarrito">
       </div>
       <br>
+      <div class="totalEnCarrito">
+        
+      </div>
       <div class="botonesCarrito">
-        <button type="button" class="btn btn-outline-secondary">Resetear carrito</button>
-        <button type="button" class="btn btn-outline-success">Avanzar Compra</button>
+        <button id="resetCarrito" type="button" class="btn btn-outline-secondary">Resetear carrito</button>
+        <button id="avanzaCompra" type="button" class="btn btn-outline-success">Avanzar Compra</button>
       </div>
     </div>
     <div class="botonVerCarrito">
@@ -69,6 +74,7 @@
         overlay: true,
       });
     </script>
+    <script src="./JS/clases.js"></script>
     <script src="./JS/arrays.js"></script>
     <script src="./JS/entrega.js"></script>
   </body>
