--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <h1 class="text-white">Merchandising</h1>
       </header>
       <br />
+      <!--market-->
       <section>
         <div id="articulos" class="articulosEstilo"></div>
       </section>
@@ -33,9 +34,10 @@
       >
         <p class="titulo">Carrito</p>
         <div id="productosEnCarrito">
+          <div id="carritoBody"></div>
       </div>
       <br>
-      <div class="totalEnCarrito">
+      <div id="totalEnCarrito">
         
       </div>
       <div class="botonesCarrito">
@@ -43,8 +45,10 @@
         <button id="avanzaCompra" type="button" class="btn btn-outline-success">Avanzar Compra</button>
       </div>
     </div>
-    <div class="botonVerCarrito">
+    <!--boton ver carrito-->  
+    <div>
       <button
+        id="fullCarrito"
         type="button"
         class="btn btn-primary"
         data-pushbar-target="pushbar-carrito"
