--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <section>
         <div id="articulos" class="articulosEstilo"></div>
       </section>
+      <!--Pushbar-->
       <div
         data-pushbar-id="pushbar-carrito"
         data-pushbar-direction="right"
@@ -35,8 +36,10 @@
         <p class="titulo">Carrito</p>
         <div id="productosEnCarrito">
           <div id="carritoBody"></div>
+          
       </div>
       <br>
+      <!--Total del carrito-->
       <div id="totalEnCarrito">
         
       </div>
@@ -45,6 +48,7 @@
         <button id="avanzaCompra" type="button" class="btn btn-outline-success">Avanzar Compra</button>
       </div>
     </div>
+    <div class="formularioCompra"></div>
     <!--boton ver carrito-->  
     <div>
       <button
