--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
       <br>
       <!--Total del carrito-->
       <div id="totalEnCarrito">
-        
       </div>
       <div class="botonesCarrito">
         <button id="resetCarrito" type="button" class="btn btn-outline-secondary">Resetear carrito</button>
         <button id="avanzaCompra" type="button" class="btn btn-outline-success">Avanzar Compra</button>
       </div>
+      <div class="formularioCompra">
+      </div>
     </div>
-    <div class="formularioCompra"></div>
     <!--boton ver carrito-->  
     <div>
       <button
